third_party/move/move-compiler-v2/tests/ability-check/v1-typing/constraints_not_satisfied_function_parameter.exp

Diagnostics:
error: type `R` is missing required ability `copy`
  ┌─ tests/ability-check/v1-typing/constraints_not_satisfied_function_parameter.move:5:22
  │
2 │     struct CupC<T: copy> { f: T }
  │                 - declaration of type parameter `T`
  ·
5 │     fun foo(_x: CupC<R>) { abort 0 }
  │                      ^
  │
  = required by instantiating type parameter `T:copy` of struct `CupC`
